--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "angular-animate": "^1.5.8",
     "angular-aria": "^1.5.8",
     "angular-cookies": "^1.5.8",
+    "angular-material": "^1.1.1",
     "angular-messages": "^1.5.8",
     "angular-sanitize": "^1.5.8",
     "angular-touch": "^1.5.8",
@@ -31,6 +32,7 @@
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.0",
     "es6-promise": "^3.0.2",
+    "eslint": "^3.8.1",
     "eslint-loader": "~1.0.0",
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^0.9.1",
