--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "angular-aria": "^1.5.8",
     "angular-cookies": "^1.5.8",
     "angular-material": "^1.1.1",
+    "angular-material-event-calendar": "^0.1.2",
     "angular-messages": "^1.5.8",
     "angular-sanitize": "^1.5.8",
     "angular-ui-router": "^0.3.1",
