--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "angular": "^1.5.8",
     "angular-animate": "^1.5.8",
     "angular-aria": "^1.5.8",
+    "angular-chart.js": "^1.0.3",
     "angular-cookies": "^1.5.8",
     "angular-material": "^1.1.1",
     "angular-material-event-calendar": "^0.1.2",
@@ -29,6 +30,7 @@
     "babel-preset-es2017": "^1.3.1",
     "babel-runtime": "^6.6.1",
     "baggage-loader": "^0.2.4",
+    "chart.js": "^2.3.0",
     "clean-webpack-plugin": "^0.1.8",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.0",
