Fixing dependency error

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "manifest-revision-webpack-plugin": "~0.1.0",
     "material-steppers": "^1.0.3",
     "ng-annotate-loader": "0.0.10",
+    "ng-file-upload": "^12.2.12",
     "ngtemplate-loader": "^1.3.1",
     "node-sass": "^3.4.2",
     "oclazyload": "^1.0.9",
