--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-es2017": "^1.3.1",
     "babel-runtime": "^6.6.1",
     "baggage-loader": "^0.2.4",
+    "calendar-base": "^0.3.0",
     "chart.js": "^2.3.0",
     "clean-webpack-plugin": "^0.1.8",
     "cross-env": "^1.0.7",
