Adding messages UI and tieing with backend

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "angular-material": "^1.1.1",
     "angular-material-event-calendar": "^0.1.2",
     "angular-messages": "^1.5.8",
+    "angular-moment": "^1.0.0",
     "angular-resource": "^1.5.8",
     "angular-sanitize": "^1.5.8",
     "angular-ui-router": "^0.3.1",
