Added file upload

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "angular-aria": "^1.5.8",
     "angular-chart.js": "^1.0.3",
     "angular-cookies": "^1.5.8",
+    "angular-file-upload": "^2.3.4",
     "angular-material": "^1.1.1",
     "angular-material-event-calendar": "^0.1.2",
     "angular-messages": "^1.5.8",
