--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "baggage-loader": "^0.2.4",
     "chart.js": "^2.3.0",
     "clean-webpack-plugin": "^0.1.8",
+    "cropperjs": "^0.8.1",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.0",
     "es6-promise": "^3.0.2",
