--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.4",
+    "google-libphonenumber": "^2.0.6",
     "html-loader": "^0.3.0",
     "html-webpack-plugin": "^1.7.0",
     "imagemin-pngquant": "^4.2.0",
